<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.otakkanan.taskapp.ui.main.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_kalender"
        android:name="com.otakkanan.taskapp.ui.main.kalender.KalenderFragment"
        android:label="@string/title_kalender"
        tools:layout="@layout/fragment_kalender" />

    <fragment
        android:id="@+id/navigation_tugas"
        android:name="com.otakkanan.taskapp.ui.main.tugas.ListTugasFragment"
        android:label="@string/title_tugas"
        tools:layout="@layout/fragment_list_tugas" />

    <fragment
        android:id="@+id/navigation_tersimpan"
        android:name="com.otakkanan.taskapp.ui.main.tugas.ListTersimpanFragment"
        android:label="List Tersimpan"
        tools:layout="@layout/fragment_list_tersimpan" />

    <action
        android:id="@+id/action_listTugasFragment_to_listTersimpanFragment"
        app:destination="@id/navigation_tersimpan" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.otakkanan.taskapp.ui.main.target.GoalsFragement"
        android:label="@string/goals_title"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.otakkanan.taskapp.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <action
        android:id="@+id/action_profileFragment_to_editProfileFragment"
        app:destination="@id/editProfileFragment" />

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.otakkanan.taskapp.ui.main.profile.editprofile.EditProfileFragment"
        android:label="Edit Profile" />

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.otakkanan.taskapp.ui.main.profile.setting.SettingFragment"
        android:label="Pengaturan" />

    <action
        android:id="@+id/action_profileFragment_to_settingFragment"
        app:destination="@id/settingFragment" />

</navigation>