<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.main.beranda.anggota.undangan.AddAnggotaActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp"
            android:paddingHorizontal="32dp"
            android:paddingTop="6dp">
            <RelativeLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="tombol kembali"
                    android:layout_marginEnd="11dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/title_count_anggota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tambah_anggota_with_count"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/md_theme_onBackground"
                    android:layout_toEndOf="@id/btn_back"/>
                <TextView
                    android:id="@+id/btn_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/selesai"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_primary"
                    android:src="@drawable/option_icon"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outline_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:layout_marginTop="42dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:layout_constraintTop_toBottomOf="@id/topBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_search"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:drawableRight="@drawable/search_icon"
                    android:padding="0dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cehckbox_anggota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/outline_search"
                tools:itemCount="9"
                tools:listitem="@layout/add_anggota_page_list"
                android:layout_marginTop="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>