<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.beranda.anggota.list_anggota.ListAnggotaActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp"
            android:paddingHorizontal="32dp"
            android:paddingTop="6dp">
            <RelativeLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="tombol kembali"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentStart="true"/>
                <ImageView
                    android:id="@+id/btn_option"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:translationY="-5dp"
                    android:contentDescription="tombol option"
                    android:src="@drawable/option_icon"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/count_anggota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anggota_count"
                android:textColor="@color/md_theme_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBar"/>
            <TextView
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_secondary"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_alignParentStart="true"
                android:drawableEnd="@drawable/search_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBar"/>

            <TextView
                android:id="@+id/btn_add_anggota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_anggota"
                android:textSize="18sp"
                android:drawableStart="@drawable/add_member_icon"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:layout_marginTop="21dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_alignParentStart="true"
                app:layout_constraintTop_toBottomOf="@id/count_anggota"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_anggota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_add_anggota"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    tools:listitem="@layout/anggota_list_item"
                    tools:itemCount="4"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/leave_icon"
        android:text="@string/keluar_dari_tim"
        android:textSize="18sp"
        android:drawablePadding="6dp"
        android:textColor="@color/md_theme_errorContainer"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="41dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>